[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11","numpy","numba"]
build-backend = "scikit_build_core.build"
#include-package-data = true


[project]
name = "excursion_set_functions"
version = "0.2.1"
description="Excursion-set functions"
readme = "README.md"
authors = [
  { name = "Giovanni Verza", email = "gverza@flatironinstitute.org" },
]
requires-python = ">=3.7"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
