[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"
#include-package-data = true


[project]
name = "excursion_set_functions"
version = "1.0.0"
description="Excursion-set functions"
readme = "README.md"
authors = [
  { name = "Giovanni Verza", email = "gverza@flatironinstitute.org" },
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "numba>=0.53",
    "scipy",
    "pybind11"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
